<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/subtle_grey"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        >
        <TextView
            android:id="@+id/add__item__fragment__title__header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_fragment_title_header"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/add__item__fragment__edit__title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:hint="Item Name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        >
        <TextView
            android:id="@+id/add__item__fragment__make__header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_fragment_make_header"
            android:textSize="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/add__item__fragment__edit__make"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_marginEnd="10dp"
                />
            <EditText
                android:id="@+id/add__item__fragment__edit__model"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        >
        <TextView
            android:id="@+id/add__item__fragment__description__header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_fragment_description_header"
            android:textSize="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/add__item__fragment__edit__description"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@color/white"
                android:layout_marginEnd="10dp"
                />
            <Button
                android:id="@+id/add__item__fragment__button__description"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1.3"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:text="@string/add_item_fragment_description_button"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item_fragment_year_header"
                android:textSize="20dp"
                />
            <EditText
                android:id="@+id/add__item__fragment__edit__year"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item_fragment_month_header"
                android:textSize="20dp"
                />
            <EditText
                android:id="@+id/add__item__fragment__edit__month"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item_fragment_date_header"
                android:textSize="20dp"
                />
            <EditText
                android:id="@+id/add__item__fragment__edit__date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_fragment_value_header"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/add__item__fragment__edit__value"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            />
    </LinearLayout>
  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        >
        <TextView
            android:id="@+id/add__item__fragment__comment__header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_fragment_comment_header"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/add__item__fragment__edit__comment"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            />
      
      </LinearLayout>
  
      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            >
            <TextView
                android:id="@+id/add__item__fragment__tag__header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item_fragment_tag_header"
                android:textSize="20dp"
                />

          <com.google.android.material.chip.ChipGroup
              android:id="@+id/add__item__fragment__chipGroup"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

          </com.google.android.material.chip.ChipGroup>
      </LinearLayout>

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            >
            <TextView
                android:id="@+id/add__item__fragment__picture__header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item_fragment_picture_header"
                android:textSize="20dp"
                />
            <Button
                android:id="@+id/add__item__fragment__edit__pictures"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:text="@string/add_item_fragment_picture_button_text"
                />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        >
        <TextView
            android:id="@+id/add__item__fragment__serial__header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_fragment_serial_header"
            android:textSize="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/add__item__fragment__edit__serial"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@color/white"
                android:layout_marginEnd="10dp"
                />
            <Button
                android:id="@+id/add__item__fragment__button__serial"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1.3"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:text="@string/add_item_fragment_serial_button"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


</ScrollView>