...
    android:id="@+id/activity__item__list__container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <ListView
        android:id="@+id/activity__item__list__item__list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="70dp" >

    </ListView>

...
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:srcCompat="@android:drawable/btn_star" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity__item__list__remove__item__button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="30dp"
        android:clickable="true"
        android:focusable="true"
...
