...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:paddingLeft="6dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/listview__item__title"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="1.00"
                android:text="Lorem Ipsum"
                android:textSize="24sp"
                />
...
